--- a/package.json
+++ b/package.json
@@ -43,5 +43,5 @@
   "devDependencies": {
     "react-lorem-ipsum": "^1.4.10"
   },
-  "homepage":"https://myusername.github.io/my-app/"
+  "homepage":"https://trielt1.github.io/gurps-utils/"
 }
